# -ha-simple-chores

./: .gitignore  LICENSE  NEXT_STEPS.md  README.md  hacs.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: hassfest.yaml
custom_components/household_tasks/: const.py  coordinator.py  manifest.json  services.yaml  strings.json
custom_components/simple_chores/: __init__.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  frontend.json  frontend_resources.py  manifest.json  sensor.py  services.yaml  store.py
custom_components/simple_chores/household_tasks/: __init__.py  binary_sensor.py  calendar.py  config_flow.py  sensor.py  store.py
custom_components/simple_chores/translations/: en.json
custom_components/simple_chores/www/: simple-chores-card.js
household-tasks-card/: README.md
