[project]
name = "simple-chores"
version = "1.0.0"
description = "Home Assistant integration for tracking household chores"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in HA)
    "ARG002", # unused method argument (common in HA)
    "SIM108", # use ternary operator (often less readable)
    "SIM116", # use dictionary instead of if statements (less readable for small cases)
    "PTH",    # use pathlib (HA codebase uses os.path)
    "TC001",  # move type-only import into TYPE_CHECKING block
    "TC002",  # move third-party import into TYPE_CHECKING block
    "TC003",  # move stdlib import into TYPE_CHECKING block
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.simple_chores"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
show_error_codes = true
ignore_missing_imports = true
# Disable strict checks that are hard to satisfy with HA framework
disable_error_code = ["arg-type", "assignment", "call-arg", "return"]

# Be lenient with Home Assistant imports (they don't have complete stubs)
[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "dateutil.*",
    "voluptuous.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["custom_components/simple_chores"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
